# stimulus-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
additional_tests/: test_launch_interpret_json.py
src/stimulus/: __init__.py
src/stimulus/analysis/: analysis_default.py
src/stimulus/cli/: analysis_default.py  check_model.py  interpret_json.py  predict.py  shuffle_csv.py  split_csv.py  transform_csv.py  tuning.py
src/stimulus/learner/: raytune_learner.py  raytune_parser.py
src/stimulus/utils/: launch_utils.py
test_env_stimulus/: pyvenv.cfg
tests/: test_cli_check_model.sh  test_cli_model_tuning.sh  test_cli_split.sh  test_csv.py  test_data_transformers.py  test_encoders.py  test_experiments.py  test_handlertorch.py  test_performance.py  test_raytune_learner.py  test_splitters.py
