[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stimulus"]

[project]
name = "stimulus"
version = "0.0.1"
authors = [
  { name="Mathys Grapotte", email="mathysgrapotte@gmail.com" },
  { name="Alessio Vignoli"},
  { name="Suzanne Jin"}
]
description = "A package for optimization of various deep learning models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
stimulus-shuffle-csv = "stimulus.cli.shuffle_csv:main"
stimulus-transform-csv = "stimulus.cli.transform_csv:main"
stimulus-split-csv = "stimulus.cli.split_csv:main"
stimulus-analysis-default = "stimulus.cli.analysis_default:main"
stimulus-predict = "stimulus.cli.predict:main"

[project.urls]
Homepage = "https://github.com/mathysgrapotte/stimulus-py"
Issues = "https://github.com/mathysgrapotte/stimulus-py/issues"

